--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     font-style: normal;
 
     display: flex;
-    justify-content: space-around;
+    justify-content:center;
 }
 
 /* -------------- General Styles -------------------*/ 
@@ -29,6 +29,43 @@ body {
     width: 50%;
 }
 
+.sticky-nav {
+    height: 200px;
+    width: 50px;
+    background-color: black;
+    border-radius: 50px;
+    position: sticky;
+    top: 60px;
+    /* left: -30px; */
+}
+
+.sticky-nav li {
+    list-style-type: none;
+    color: #fff;
+    border-bottom: 1px solid #d3cece;
+    text-decoration: none;
+    margin: 10px;
+    display: block;
+    text-align: center;
+}
+
+.sticky-nav li:hover {
+    background-color: rgba(204, 202, 202, 0.6);
+}
+
+.sticky-nav ul {
+    text-decoration: none;
+    padding: 0px;
+}
+
+.sticky-nav a {
+    text-decoration: none;
+}
+
+.icon{
+    height: 20px;
+    width : 20px;
+}
 /* ---------- Personal Information ---------------- */
 
 .dot {
@@ -94,34 +131,13 @@ body {
 
 }
 
+
+/* ------------------------ Sections ---------------------- */ 
+
 .section-title {
     padding-top: 0px;
     padding-bottom: 0px;
     margin-top: 20px
-}
-
-.sticky-nav {
-    height: 220px;
-    width: 50px;
-    background-color: black;
-    border-radius: 50px;
-    position: sticky;
-    top: 60px;
-    left: -30px;
-}
-
-.sticky-nav li {
-    list-style-type: none;
-    color: #fff;
-    border-bottom: 1px solid #d3cece;
-    text-decoration: none;
-    margin: 20px;
-    display: block;
-}
-
-.sticky-nav ul {
-    text-decoration: none;
-    padding: 0px;
 }
 
 .section-content {
