--- a/styles.css
+++ b/styles.css
@@ -121,11 +121,13 @@ body {
     color: #fff;
     padding: 15px;
     border-radius: 15px;
+    border: 2px solid black;
 }
 
 .btn-black a {
     color: #fff;
     text-decoration: none;
+
 }
 .btn-black:hover{
     background-color: white;
