--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     margin:10px;
 }
 /* -------------- General Styles -------------------*/ 
-.container {
+.global-container {
     max-width: 800px;
     width: 100%;
     margin: 50px 10px;
@@ -266,4 +266,50 @@ body {
     background-color: rgb(204, 202, 202);
     color:black;
    
+}
+
+/* ---------------------- FLIP CARD ------------*/
+
+.flipcards{
+    height: 350px;
+}
+.flip-card {
+    perspective: 1000px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    background-color: #f8f9fa;
+    color: #000;
+}
+
+.flip-card-back {
+    background-color: #343a40;
+    color: #000;
+    transform: rotateY(180deg);
+}
+
+.card-img-top {
+    max-height: 200px;
+    object-fit: cover;
 }
